cluster/gitbee/network_policy.yaml
# Denies everything except policies
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: gitbee
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

# Allows Kube DNS traffic
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-dns
  namespace: gitbee
spec:
  podSelector:
    matchLabels:
      app: gitbee
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53

# Allowing egress gitbee to internet (required for talking to Github and Gitlab)
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gitbee-egress-internet
  namespace: gitbee
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - gitbee
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0

# Allowing egress bot to uptime-kuma traffic
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-bot-to-uptime-kuma
  namespace: gitbee
spec:
  podSelector:
    matchLabels:
      app: gitbee
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: uptime-kuma
          podSelector:
            matchLabels:
              app: uptime-kuma
      ports:
        - protocol: TCP
          port: 3001
